--- a/get_involved.html
+++ b/get_involved.html
@@ -4,37 +4,94 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title> Get Involved</title>
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="css/involved_style.css">
+    <title>GET INVOLVED</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
+
 
 <body>
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <header>
         <nav>
             <ul>
-                <li><a href="homepage.html">Homepage</a></li>
-                <li><a href="about_us.html">About Us</a></li>
-                <li><a href="get_involved.html">Get Involved</a></li>
-                <li><a href="therapies.html">Our Therapies</a></li>
+                <li><img src="images/WHITE LONG.png" alt=""></li>
+                <li><a href="get_involved.html" class="active">GET INVOLVED</a></li>
+                <li><a href="about_us.html">ABOUT US</a></li>
+                <li><a href = "homepage.html">HOME</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="container" id = "main">
-        <h1>Get Involved!</h1>
-        <h2> Our upcoming events include...</h2>
-            <ul>
-                <li>PJ Party</li>
-                <li>Victor's Voices</li>
-                <li>DMUM Benefit Concert </li>
-                <li>& Victorton</li>
-            </ul>
-        <div class = "row">
-            <div class = "column">
-                <img src="images/bucket.jpg" alt="" style="width:100%">
+        <div class = "grid-container">
+            <div class="grid-item1" tabindex="0">
+                <form action="/action_page.php">
+                    <body>Interested in Joining in on the Fun?<br> Join our Mailing List to stay up to date with all things DMUM!</body><br><br>
+                    <label for="fname">First name:</label><br>
+                    <input type="text" id="fname" name="fname" ><br>
+                    <label for="lname">Last name:</label><br>
+                    <input type="text" id="lname" name="lname" ><br>
+                    <label for="email">Email:</label><br>
+                    <input type="text" id="email" name="email" ><br>
+                    <input type="submit" value="Submit">
+                  </form>
+            </div>
+            <div class = "grid-item2">
+                <img src="images/tinker.jpg" alt="A girl with a power tool working to make toys" style="width:100%">
+            </div>
         </div>
-    </main>
-    
+
+        <br><br><h1> Ways to Volunteer & Help Support DMUM!</h1>
+
+        <div class="flex-container" tabindex="0">
+            <div class = "flex-item1">
+                <img src="images/cc1.JPG" alt="Students finger painting" style="width:250px"></div>
+            <div class = "flex-item2">
+                <img src="images/bucket.jpg" alt="An image of a bucket with the letters DMUM on it" style="width:250px"></div>
+            <div class = "flex-item3">
+                <img src="images/sp1.jpeg" alt="Sophie's Place, a music therapy studio at CS Mott Children's Hospital" style="width:250px"></div>
+            <div class = "flex-item4">
+                <img src="images/tg1.JPG" alt="A poster detailing what Therapeutic Gaming is" style="width:250px"></div>
+            <div class = "flex-item5">
+                <img src="images/atc2.jpg" alt="Two girls in helmets participating in Adaptive Tree Climbing" style="width:250px"></div>
+            <div class = "flex-item6">
+                <img src="images/tiger.jpg" alt="A young boy with tiger face paint on roaring" style="width:250px"></div>
+        </div>
+
+        <br><br><h1>Follow Us on Social Media for more updates!</h1>
+
+        <div class = "grid-container3" tabindex="0">
+            <div class = "grid3-item1">
+                <img src="images/instass.jpeg" alt="A screenshot of the DMUM instagram page" style="width:100%"></div>
+            <div class = "grid3-item3">
+                <img src="images/twitterss.jpeg" alt="A screenshot of the DMUM twitter page" style="width:100%"></div>
+            <div class = "grid3-item2">
+                <img src="images/insta.jpeg" alt="A screenshot of the DMUM tiktok page" style="width:100%"></div>
+        </div>
+    </main> 
+    <footer>
+        <img src="images/c-s-mott-childrens-hospital-logos-idVJ1cAD8P.png" alt="CS Mott Children’s Hospital Logo" style="width: 30%" tabindex="0"></div>
+    </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+        <!-- <div class = "grid-container2"></div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="images/cc1.JPG" alt="" style="width:300px;height:300px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <h1>Creative Coping</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
