--- a/about_us.html
+++ b/about_us.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>About Us</title>
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="css/aboutus_style.css">
+    <title>ABOUT US</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
-
 
 
 <body>
@@ -15,25 +16,43 @@
     <header>
         <nav>
             <ul>
-                <li><a href = "homepage.html">Homepage</a></li>
-                <li><a href="about_us.html">About Us</a></li>
-                <li><a href="get_involved.html">Get Involved</a></li>
-                <li><a href="therapies.html">Our Therapies</a></li>
+                <li><img src="images/WHITE LONG.png" alt=""></li>
+                <li><a href="get_involved.html">GET INVOLVED</a></li>
+                <li><a href="about_us.html" class="active">ABOUT US</a></li>
+                <li><a href="homepage.html">HOME</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="container" id = "main">
-        <h1>About Us</h1>
-        <h2> What is DMUM?</h2>
-        <body>Dance Marathon at the University of Michigan (DMUM) is a student organization dedicated to raising funds and awareness for pediatric therapies at University of Michigan Health C.S. Mott Children’s Hospital. Contrary to popular belief, we are not a dance group! Throughout the year, our members volunteer at therapies, fundraise, foster relationships with our DMUM families, and prepare for VictorThon where we stand for 24 hours to show our support For the Little Victors! There are countless ways to get involved with DMUM.
-        <h2> History</h2>
-            <body>In 1997, Dance Marathon made its way to the University of Michigan. Inder Singh, DMUM’s founder, had heard of the positive impacts that Dance Marathons across the country were making on both the kids and families they support, as well as the students that stand. Consequently, he brought Dance Marathon to Ann Arbor. With help from the Children’s Miracle Network, 24 students on the first Central Planning Team set out to organize U of M’s first Marathon during the 1997-1998 school year. In the spring of 1998, Michigan’s first Dance Marathon came to fruition. Hundreds of dancers stood, and the organization raised $35,000 for pediatric rehabilitation therapies at Beaumont Children’s in Royal Oak, MI. Throughout DMUM’s 25 year history, the organization has raised nearly $6.5 million for our cause. Today we have expanded to support the University of Michigan Health C.S. Mott Children’s Hospital. In the spring of 2020, DMUM organized the first ever Virtual VictorThon in light of COVID-19.</body>
-        <div class = "row">
-            <div class = "column">
-                <img src="images/involved.JPG" alt="" style="width:100%">
-        </div>
+        <div class = "grid-container1"></div>
+            <div class="grid-item1" tabindex="0">
+            <h1> Who We Are...</h1>
+                <body>Dance Marathon at the University of Michigan (DMUM) is a student organization dedicated to raising funds and awareness for pediatric therapies at University of Michigan Health C.S. Mott Children’s Hospital. Contrary to popular belief, we are not a dance group! Throughout the year, our members volunteer at therapies, fundraise, foster relationships with our DMUM families, and prepare for VictorThon where we stand for 24 hours to show our support For the Little Victors! There are countless ways to get involved with DMUM.
+                </body>
+            </div>
+
+            <div class="grid-item2" tabindex="0">
+            <h1> Our History...</h1>
+                <p>In 1997, Dance Marathon made its way to the University of Michigan. Inder Singh, DMUM’s founder, had heard of the positive impacts that Dance Marathons across the country were making on both the kids and families they support, as well as the students that stand. Consequently, he brought Dance Marathon to Ann Arbor.
+                    <br>
+                    <br>
+                    With help from the Children’s Miracle Network, 24 students on the first Central Planning Team set out to organize U of M’s first Marathon during the 1997-1998 school year.
+                    <br>
+                    <br>
+                    In the spring of 1998, Michigan’s first Dance Marathon came to fruition. Hundreds of dancers stood, and the organization raised $35,000 for pediatric rehabilitation therapies at Beaumont Children’s in Royal Oak, MI.
+                    <br>
+                    <br>
+                    Throughout DMUM’s 25 year history, the organization has raised nearly $6.5 million for our cause. Today we have expanded to support the University of Michigan Health C.S. Mott Children’s Hospital. In the spring of 2020, DMUM organized the first ever Virtual VictorThon in light of COVID-19.
+                </p>
+            </div>
+            <div class = "background2">
+                    <img src="images/VT.JPG" alt="" style="width:100%"></div>
     </main>
-    
+
+    <footer>
+        <img src="images/c-s-mott-childrens-hospital-logos-idVJ1cAD8P.png" alt="CS Mott Children’s Hospital Logo" style="width: 30%" tabindex="0"></div>
+    </footer>
+
 </body>
 </html>
