--- a/get_involved.html
+++ b/get_involved.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <ul>
-                <li><img src="images/WHITE LONG.png" alt=""></li>
+                <img src="images/WHITE LONG.png" alt="" style="width:20%">
                 <li><a href="get_involved.html" class="active">GET INVOLVED</a></li>
                 <li><a href="about_us.html">ABOUT US</a></li>
                 <li><a href = "homepage.html">HOME</a></li>
