--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <ul>
-                <img src="images/WHITE LONG.png" alt="" style="width:20%">
+                <li><img src="images/WHITE LONG.png" alt="" style="width:20%"></li>
                 <li><a href="get_involved.html">GET INVOLVED</a></li>
                 <li><a href="about_us.html">ABOUT US</a></li>
                 <li><a href="homepage.html" class="active">HOME</a></li>
