--- a/about_us.html
+++ b/about_us.html
@@ -16,10 +16,10 @@
     <header>
         <nav>
             <ul>
-                <li><img src="images/WHITE LONG.png" alt="" style="width:20%"></li>
-                <li><a href="get_involved.html">GET INVOLVED</a></li>
-                <li><a href="about_us.html" class="active">ABOUT US</a></li>
+                <li><img src="images/WHITE LONG.png" alt="" ></li>
                 <li><a href="homepage.html">HOME</a></li>
+                <li><a href="about_us.html" class="active">ABOUT US</a></li>
+                <li><a href="get_involved.html">JOIN</a></li>
             </ul>
         </nav>
     </header>
@@ -46,13 +46,13 @@
                     Throughout DMUM’s 25 year history, the organization has raised nearly $6.5 million for our cause. Today we have expanded to support the University of Michigan Health C.S. Mott Children’s Hospital. In the spring of 2020, DMUM organized the first ever Virtual VictorThon in light of COVID-19.
                 </p>
             </div>
-            <div class = "background2">
+            <div class = "background2" tabindex="0">
                     <img src="images/VT.JPG" alt="" style="width:100%"></div>
     </main>
 
-    <footer>
+    <!-- <footer>
         <img src="images/c-s-mott-childrens-hospital-logos-idVJ1cAD8P.png" alt="CS Mott Children’s Hospital Logo" style="width: 30%" tabindex="0"></div>
-    </footer>
+    </footer> -->
 
 </body>
 </html>
