--- a/get_involved.html
+++ b/get_involved.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="css/involved_style.css">
-    <title>GET INVOLVED</title>
+    <link rel="stylesheet" href="css/REDOinvolved_style.css">
+    <title>JOIN</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
@@ -16,10 +16,10 @@
     <header>
         <nav>
             <ul>
-                <li><img src="images/WHITE LONG.png" alt="" style="width:20%"></li>
-                <li><a href="get_involved.html" class="active">GET INVOLVED</a></li>
+                <li><img src="images/WHITE LONG.png" alt="" ></li>
+                <li><a href="homepage.html">HOME</a></li>
                 <li><a href="about_us.html">ABOUT US</a></li>
-                <li><a href = "homepage.html">HOME</a></li>
+                <li><a href="get_involved.html" class="active" >JOIN</a></li>
             </ul>
         </nav>
     </header>
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <br><br><h1> Ways to Volunteer & Help Support DMUM!</h1>
+        <h1> Ways to Volunteer & Help Support DMUM!</h1>
 
         <div class="flex-container" tabindex="0">
             <div class = "flex-item1">
@@ -71,27 +71,8 @@
                 <img src="images/insta.jpeg" alt="A screenshot of the DMUM tiktok page" style="width:100%"></div>
         </div>
     </main> 
-    <footer>
+    <!-- <footer>
         <img src="images/c-s-mott-childrens-hospital-logos-idVJ1cAD8P.png" alt="CS Mott Children’s Hospital Logo" style="width: 30%" tabindex="0"></div>
-    </footer>
+    </footer> -->
 </body>
 </html>
-
-
-
-
-
-
-
-        <!-- <div class = "grid-container2"></div>
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img src="images/cc1.JPG" alt="" style="width:300px;height:300px;">
-                    </div>
-                    <div class="flip-card-back">
-                        <h1>Creative Coping</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
