--- a/homepage.html
+++ b/homepage.html
@@ -17,10 +17,10 @@
     <header>
         <nav>
             <ul>
-                <li><img src="images/WHITE LONG.png" alt="" style="width:20%"></li>
-                <li><a href="get_involved.html">GET INVOLVED</a></li>
-                <li><a href="about_us.html">ABOUT US</a></li>
+                <li><img src="images/WHITE LONG.png" alt="" ></li>
                 <li><a href="homepage.html" class="active">HOME</a></li>
+                <li><a href="about_us.html">ABOUT US</a></li>
+                <li><a href="get_involved.html">JOIN</a></li>
             </ul>
         </nav>
     </header>
@@ -57,9 +57,11 @@
                 <img src="images/tiger.jpg" alt="A young boy with tiger face paint on roaring" style="width: 100%"></div>
             <div class = "grid2-item7">
                 <img src="images/atc3.jpg" alt="A girl sitting on a tree branch with a helmet on" style="width: 100%"></div>
+            <div class = "grid2-item8">
+                <img src="images/favicon.ico" alt="" style="width: 100%"></div>
     </main>
-    <footer>
+    <!-- <footer>
         <img src="images/c-s-mott-childrens-hospital-logos-idVJ1cAD8P.png" alt="CS Mott Children’s Hospital Logo" style="width: 30%" tabindex="0"></div>
-    </footer>
+    </footer> -->
 </body>
 </html>
