--- a/about_us.html
+++ b/about_us.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,12 +11,12 @@
 </head>
 
 
-<body>
+<body> 
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <header>
         <nav>
             <ul>
-                <li><img src="images/WHITE LONG.png" alt="" ></li>
+                <li><img src="images/WHITE LONG.png" alt="DMUM Logo" ></li>
                 <li><a href="homepage.html">HOME</a></li>
                 <li><a href="about_us.html" class="active">ABOUT US</a></li>
                 <li><a href="get_involved.html">JOIN</a></li>
@@ -34,25 +34,25 @@
 
             <div class="grid-item2" tabindex="0">
             <h1> Our History...</h1>
-                <p>In 1997, Dance Marathon made its way to the University of Michigan. Inder Singh, DMUM’s founder, had heard of the positive impacts that Dance Marathons across the country were making on both the kids and families they support, as well as the students that stand. Consequently, he brought Dance Marathon to Ann Arbor.
-                    <br>
-                    <br>
-                    With help from the Children’s Miracle Network, 24 students on the first Central Planning Team set out to organize U of M’s first Marathon during the 1997-1998 school year.
-                    <br>
-                    <br>
-                    In the spring of 1998, Michigan’s first Dance Marathon came to fruition. Hundreds of dancers stood, and the organization raised $35,000 for pediatric rehabilitation therapies at Beaumont Children’s in Royal Oak, MI.
-                    <br>
-                    <br>
-                    Throughout DMUM’s 25 year history, the organization has raised nearly $6.5 million for our cause. Today we have expanded to support the University of Michigan Health C.S. Mott Children’s Hospital. In the spring of 2020, DMUM organized the first ever Virtual VictorThon in light of COVID-19.
-                </p>
+            <p>In 1997, Dance Marathon made its way to the University of Michigan. Inder Singh, DMUM’s founder, had heard of the positive impacts that Dance Marathons across the country were making on both the kids and families they support, as well as the students that stand. Consequently, he brought Dance Marathon to Ann Arbor.
+                <br>
+                <br>
+                With help from the Children’s Miracle Network, 24 students on the first Central Planning Team set out to organize U of M’s first Marathon during the 1997-1998 school year.
+                <br>
+                <br>
+                In the spring of 1998, Michigan’s first Dance Marathon came to fruition. Hundreds of dancers stood, and the organization raised $35,000 for pediatric rehabilitation therapies at Beaumont Children’s in Royal Oak, MI.
+                <br>
+                <br>
+                Throughout DMUM’s 25 year history, the organization has raised nearly $6.5 million for our cause. Today we have expanded to support the University of Michigan Health C.S. Mott Children’s Hospital. In the spring of 2020, DMUM organized the first ever Virtual VictorThon in light of COVID-19.
+            </p>
             </div>
-            <div class = "background2" tabindex="0">
-                    <img src="images/VT.JPG" alt="" style="width:100%"></div>
+        <div class = "background2" tabindex="0">
+                <img src="images/VT.JPG" alt="" style="width:100%"></div>
     </main>
-
-    <!-- <footer>
-        <img src="images/c-s-mott-childrens-hospital-logos-idVJ1cAD8P.png" alt="CS Mott Children’s Hospital Logo" style="width: 30%" tabindex="0"></div>
-    </footer> -->
-
+    <footer>
+        <a href="https://www.instagram.com/dmatum/"><img src="images/insta_logo.png" alt="Instagram Logo" style="width: 50%" tabindex="0"></a>
+        <a href="https://www.facebook.com/DMatUM"><img src="images/facebook_logo.png" alt="Facebook Logo" style="width: 50%" tabindex="0"></a>
+        <a href="https://twitter.com/DMatUM"><img src="images/twitter.png" alt="Twitter Logo" style="width: 50%" tabindex="0"></a>
+    </footer>
 </body>
 </html>
