--- a/get_involved.html
+++ b/get_involved.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="css/REDOinvolved_style.css">
+    <link rel="stylesheet" href="css/involved_style.css">
     <title>JOIN</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <ul>
-                <li><img src="images/WHITE LONG.png" alt="" ></li>
+                <li><img src="images/WHITE LONG.png" alt="DMUM Logo" ></li>
                 <li><a href="homepage.html">HOME</a></li>
                 <li><a href="about_us.html">ABOUT US</a></li>
                 <li><a href="get_involved.html" class="active" >JOIN</a></li>
@@ -25,8 +25,9 @@
     </header>
 
     <main class="container" id = "main">
-        <div class = "grid-container">
-            <div class="grid-item1" tabindex="0">
+        <br><br><br>
+        <div class = "form-container">
+            <div class="form" tabindex="0">
                 <form action="/action_page.php">
                     <body>Interested in Joining in on the Fun?<br> Join our Mailing List to stay up to date with all things DMUM!</body><br><br>
                     <label for="fname">First name:</label><br>
@@ -38,41 +39,92 @@
                     <input type="submit" value="Submit">
                   </form>
             </div>
-            <div class = "grid-item2">
-                <img src="images/tinker.jpg" alt="A girl with a power tool working to make toys" style="width:100%">
+            <div class = "grid-item2" tabindex="0">
+                <img src="images/tinker.jpg" alt="A girl with a power tool working to make toys" style="width:100% ;border-radius: 25%;">
             </div>
         </div>
 
         <h1> Ways to Volunteer & Help Support DMUM!</h1>
+        <h2> (Hover to Learn More)</h2>
 
-        <div class="flex-container" tabindex="0">
+        <div class="FRONT-flex-container" tabindex="0">
             <div class = "flex-item1">
-                <img src="images/cc1.JPG" alt="Students finger painting" style="width:250px"></div>
+                <img src="images/cc1.JPG" alt="Students finger painting" style="width: 100%;border-radius: 25%;"></div>
+                <p>  Creative Coping provides the opportunity for participants to explore coping strategies through expressive and experiential art, crafts, and activity-based games, like journaling and creating dream catchers. This therapy occurs in both an in-person and virtual format for participants and volunteers. </p>
             <div class = "flex-item2">
-                <img src="images/bucket.jpg" alt="An image of a bucket with the letters DMUM on it" style="width:250px"></div>
+                <img src="images/sp1.jpeg" alt="Sophie's Place, a music therapy studio at CS Mott Children's Hospital" style="width: 100%;border-radius: 25%;"></div>
+                <p>  Sophie's Place is a dedicated music therapy environment in C.S. Mott Children's hospital to promote creativity, safety, and expression for patients and their families during their healing. Sophie's Place offers opportunities to record music, play a variety of instruments, and engage with music therapy sessions.  </p>
             <div class = "flex-item3">
-                <img src="images/sp1.jpeg" alt="Sophie's Place, a music therapy studio at CS Mott Children's Hospital" style="width:250px"></div>
+                <img src="images/tg1.JPG" alt="A poster detailing what Therapeutic Gaming is" style="width: 100%;border-radius: 25%;"></div>
+                <p>  The Patient Technology Department at C.S. Mott Children's Hospital enhances patient experience through therapeutic video games and other technology platforms. This team offers in-room gaming, volunteer gamers and game developers, lego and robotics, and virtual reality experiences for patients!  </p>
             <div class = "flex-item4">
-                <img src="images/tg1.JPG" alt="A poster detailing what Therapeutic Gaming is" style="width:250px"></div>
+                <img src="images/atc2.jpg" alt="Two girls in helmets participating in Adaptive Tree Climbing" style="width: 100%;border-radius: 25%;"></div>
+                <p>  One of the most unique therapies and volunteer opportunities DMUM funds is Adaptive Tree Climbing. This form of therapy allows patients with physical limitations to learn how to climb trees with the assistance of adaptive equipment. </p>
             <div class = "flex-item5">
-                <img src="images/atc2.jpg" alt="Two girls in helmets participating in Adaptive Tree Climbing" style="width:250px"></div>
+                <img src="images/tiger.jpg" alt="A young boy with tiger face paint on roaring" style="width: 100%;border-radius: 25%;"></div>
+                <p>  DMUM hosts a number of events each year for the patients and families of C.S. Mott Children’s Hospital! Some of our events include our annual Halloween Spook-a-Thon in the Fall and VictorThon our largest event where we stand for 24 hours to raise funds of the Little Victors! </p>
             <div class = "flex-item6">
-                <img src="images/tiger.jpg" alt="A young boy with tiger face paint on roaring" style="width:250px"></div>
+                <img src="images/bucket.jpg" alt="An image of a bucket with the letters DMUM on it" style="width: 100%;border-radius: 25%;"></div>
+                <p>  Interested in helping us raise funds? Bucketing is a great way to do so! DMUM members go bucketing almost every weekend in the fall to collect donations from members of the Ann Arbor community! </p>
         </div>
 
-        <br><br><h1>Follow Us on Social Media for more updates!</h1>
+        <br>
 
-        <div class = "grid-container3" tabindex="0">
-            <div class = "grid3-item1">
-                <img src="images/instass.jpeg" alt="A screenshot of the DMUM instagram page" style="width:100%"></div>
-            <div class = "grid3-item3">
-                <img src="images/twitterss.jpeg" alt="A screenshot of the DMUM twitter page" style="width:100%"></div>
-            <div class = "grid3-item2">
-                <img src="images/insta.jpeg" alt="A screenshot of the DMUM tiktok page" style="width:100%"></div>
+        <div class="BACK-flex-container" tabindex="0">
+            <div class = "flex2-item1">
+                <img src="images/creative_coping.png" alt="" style="width: 100%;border-radius: 25%;"></div>
+            <div class = "flex2-item2">
+                <img src="images/sophies_place.png" alt="" style="width: 100%;border-radius: 25%;"></div>
+            <div class = "flex2-item3">
+                <img src="images/therapeutic_gaming.png" alt="" style="width: 100%;border-radius: 25%;"></div>
+            <div class = "flex2-item4">
+                <img src="images/atc.png" alt="" style="width: 100%;border-radius: 25%;"></div>
+            <div class = "flex2-item5">
+                <img src="images/events.png" alt="" style="width: 100%;border-radius: 25%;"></div>
+            <div class = "flex2-item6">
+                <img src="images/bucketing.png" alt="" style="width: 100%;border-radius: 25%;"></div>
         </div>
+
+        <div class = "countdown-container" tabindex="0">
+            <h2> Days Until VictorThon...</h2>
+            <!-- Display the countdown timer in an element -->
+            <p id="demo"></p></div>
+
+            <script>
+            // Set the date we're counting down to
+            var countDownDate = new Date("Mar 28, 2023 08:00:00").getTime();
+
+            // Update the count down every 1 second
+            var x = setInterval(function() {
+
+            // Get today's date and time
+            var now = new Date().getTime();
+
+            // Find the distance between now and the count down date
+            var distance = countDownDate - now;
+
+            // Time calculations for days, hours, minutes and seconds
+            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            // Display the result in the element with id="demo"
+            document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+            + minutes + "m " + seconds + "s ";
+
+            // If the count down is finished, write some text
+            if (distance < 0) {
+                clearInterval(x);
+                document.getElementById("demo").innerHTML = "HAPPY VICTORTHON!";
+            }
+            }, 1000);
+        </script>
+
     </main> 
-    <!-- <footer>
-        <img src="images/c-s-mott-childrens-hospital-logos-idVJ1cAD8P.png" alt="CS Mott Children’s Hospital Logo" style="width: 30%" tabindex="0"></div>
-    </footer> -->
-</body>
+    <footer tabindex="0">
+        <a href="https://www.instagram.com/dmatum/"><img src="images/insta_logo.png" alt="Instagram Logo" style="width: 50%" ></a>
+        <a href="https://www.facebook.com/DMatUM"><img src="images/facebook_logo.png" alt="Facebook Logo" style="width: 50%" ></a>
+        <a href="https://twitter.com/DMatUM"><img src="images/twitter.png" alt="Twitter Logo" style="width: 50%" ></a>
+    </footer>
 </html>
