--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <ul>
-                <li><img src="images/WHITE LONG.png" alt="" ></li>
+                <li><img src="images/WHITE LONG.png" alt="DMUM Logo" ></li>
                 <li><a href="homepage.html" class="active">HOME</a></li>
                 <li><a href="about_us.html">ABOUT US</a></li>
                 <li><a href="get_involved.html">JOIN</a></li>
@@ -36,7 +36,7 @@
                 </body>
             </div>
             <div class = "grid1-item2">
-                <img src="images/redbull.jpg" alt="3 Girls Smiling Holding Cans of Redbull" style="width:100%">
+                <img src="images/redbull.jpg" alt="3 Girls Smiling Holding Cans of Redbull" style="width:100%;border-radius: 25px;">
             </div>
         </div>
 
@@ -60,8 +60,11 @@
             <div class = "grid2-item8">
                 <img src="images/favicon.ico" alt="" style="width: 100%"></div>
     </main>
-    <!-- <footer>
-        <img src="images/c-s-mott-childrens-hospital-logos-idVJ1cAD8P.png" alt="CS Mott Children’s Hospital Logo" style="width: 30%" tabindex="0"></div>
-    </footer> -->
+    <footer>
+        <a href="https://www.instagram.com/dmatum/"><img src="images/insta_logo.png" alt="Instagram Logo" style="width: 50%" tabindex="0"></a>
+        <a href="https://www.facebook.com/DMatUM"><img src="images/facebook_logo.png" alt="Facebook Logo" style="width: 50%" tabindex="0"></a>
+        <a href="https://twitter.com/DMatUM"><img src="images/twitter.png" alt="Twitter Logo" style="width: 50%" tabindex="0"></a>
+    </footer>
 </body>
 </html>
+
